# content-signal-extractor

./: .gitignore  README.md
content_signals/: README.md  cli.py  extractor.py  models.py  patterns.py  pyproject.toml  report.py  sample_texts.py  test_extractor.py
