[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-signal-extractor"
version = "0.1.0"
description = "Extracts structured Trust & Safety signals from text using rules-based heuristics. Zero external dependencies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["trust-and-safety", "content-moderation", "nlp", "pii", "toxicity", "signal-extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: Log Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
content-signals = "content_signals.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["content_signals*"]
